Task 2/home/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-py-app
  template:
    metadata:
      labels:
        app: hello-py-app
    spec:
      containers:
        - name: hello-py
          image: vlukanin/otus-learning-tasks:v0.3
          ports:
            - name: web
              containerPort: 8080
          livenessProbe:
            httpGet:
              port: 8080
              path: /version
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8080
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
